vesion 2/fw/start/sandbox/v1/Workspace01/start01.cydsn/CortexM0/ARM_GCC_493/Debug/BUILD.log
--------------- Build Started: 07/05/2016 16:05:13 Project: start01, Configuration: ARM GCC 4.9-2015-q1-update Debug ---------------
The code generation step is up to date.
arm-none-eabi-gcc.exe -mcpu=cortex-m0 -mthumb -Wno-main -I. -IGenerated_Source\PSoC4 -Wa,-alh=.\CortexM0\ARM_GCC_493\Debug/main.lst -g -D DEBUG -Wall -ffunction-sections -Og -ffat-lto-objects -c .\main.c -o .\CortexM0\ARM_GCC_493\Debug\main.o
In file included from .\main.c:11:0:
.\wait_timer.h:16:6: error: conflicting types for 'DatabaseWrite'
 bool DatabaseWrite(uint32 data);
      ^
In file included from .\main.c:10:0:
.\database.h:18:6: note: previous declaration of 'DatabaseWrite' was here
 bool DatabaseWrite(int data);
      ^
.\main.c: In function 'SkierStart':
.\main.c:75:11: warning: unused variable 'time' [-Wunused-variable]
  uint32_t time;
           ^
The command 'arm-none-eabi-gcc.exe' failed with exit code '1'.
--------------- Build Failed: 07/05/2016 16:05:14 ---------------
